cmake_minimum_required(VERSION 3.5)
project(gameengine)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS true)

if (NOT APPLE)
    if (WIN32)
        include_directories(external/glm/include)
    endif()
    include_directories(external/glad/include)
    set(GLAD_SRC external/glad/src/glad.c)
else()
    find_package(GLFW 3.4)
endif()

add_executable(${CMAKE_PROJECT_NAME} external/glad/src/glad.c src/main.cc src/window.cc)

if (LINUX)
    target_link_libraries(${CMAKE_PROJECT_NAME} GL glfw)
elseif (WIN32)
    target_link_libraries(${CMAKE_PROJECT_NAME} glfw3 kernel32 opengl32)
elseif (APPLE)
    target_link_libraries(${CMAKE_PROJECT_NAME} glfw "-framework OpenGL" "-framework IOKit" "-framework Cocoa")
endif()
